--- a/webpackDemo/package.json
+++ b/webpackDemo/package.json
@@ -2,7 +2,7 @@
   "name": "webpackdemo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "less": "^4.2.0",
+    "less-loader": "^11.1.3",
+    "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^6.2.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
   }
