--- a/webpackDemo/package.json
+++ b/webpackDemo/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "eslint": "^8.48.0",
+    "eslint-webpack-plugin": "^4.0.1",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
     "sass": "^1.66.1",
