--- a/webpackDemo/package.json
+++ b/webpackDemo/package.json
@@ -16,6 +16,7 @@
     "@babel/core": "^7.22.11",
     "@babel/plugin-transform-runtime": "^7.22.10",
     "@babel/preset-env": "^7.22.10",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
