--- a/webpackDemo/package.json
+++ b/webpackDemo/package.json
@@ -43,11 +43,15 @@
     "thread-loader": "^4.0.2",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "browserslist": [
     "last 2 version",
     "> 1%",
     "not dead"
-  ]
+  ],
+  "dependencies": {
+    "core-js": "^3.32.1"
+  }
 }
