--- a/threeDemo/package.json
+++ b/threeDemo/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx webpack-dev-server"
+    "dev": "npx webpack-dev-server",
+    "webpack": "webpack"
   },
   "keywords": [],
   "author": "",
