--- a/threeDemo/package.json
+++ b/threeDemo/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^5.5.3",
+    "lil-gui": "^0.19.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
